--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitHub Favorites</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
     <div id="app">
         <header>
@@ -17,38 +19,58 @@
             </div>
         </header>
         <table></table>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>Usuário</th>
+                    <th>Repositórios</th>
+                    <th>Seguidores</th>
+                    <th></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="user">
+                        <img src="https://github.com/lucasBalbueno.png" alt="Imagem de Usuário">
+                        <a href="https://www.github.com/lucasBalbueno" target="_blank">
+                            <p>Lucas Balbueno</p>
+                            <span>lucasBalbueno</span>
+                        </a>
+                        <span></span>
+                    </td>
+                    <td class="repositories">
+                        356
+                    </td>
+                    <td class="followers">
+                        45
+                    </td>
+                    <td>
+                        <button class="remove">&times;</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="user">
+                        <img src="https://github.com/diego3g.png" alt="Imagem de Usuário">
+                        <a href="https://www.github.com/diego3g" target="_blank">
+                            <p>Diego Fernandes</p>
+                            <span>diego3g</span>
+                        </a>
+                        <span></span>
+                    </td>
+                    <td class="repositories">
+                        356
+                    </td>
+                    <td class="followers">
+                        45
+                    </td>
+                    <td>
+                        <button class="remove">&times;</button>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
-    <table>
-        <thead>
-            <tr>
-                <th>Usuário</th>
-                <th>Repositórios</th>
-                <th>seguidores</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td class="user">
-                    <img src="https://github.com/lucasBalbueno.png" alt="Imagem de Usuário">
-                    <a href="https://www.github.com/lucasBalbueno" target="_blank">
-                        <p>Lucas Balbueno</p>
-                        <span>lucasBalbueno</span>
-                    </a>
-                    <span></span>
-                </td>
-                <td class="repositories">
-                    356
-                </td>
-                <td class="followers">
-                    45
-                </td>
-                <td>
-                    <button>&times;</button>
-                </td>
-            </tr>
-        </tbody>
-        <tfoot></tfoot>
-    </table>
 </body>
+
 </html>
