--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GitHub Favorites</title>
     <link rel="stylesheet" href="./style.css">
+    <script type="module" src="./js/main.js" defer></script>
 </head>
 
 <body>
@@ -29,48 +30,8 @@
                     <th></th>
                 </tr>
             </thead>
-            <tbody>
-                <tr>
-                    <td class="user">
-                        <img src="https://github.com/lucasBalbueno.png" alt="Imagem de Usuário">
-                        <a href="https://www.github.com/lucasBalbueno" target="_blank">
-                            <p>Lucas Balbueno</p>
-                            <span>lucasBalbueno</span>
-                        </a>
-                        <span></span>
-                    </td>
-                    <td class="repositories">
-                        356
-                    </td>
-                    <td class="followers">
-                        45
-                    </td>
-                    <td>
-                        <button class="remove">&times;</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="user">
-                        <img src="https://github.com/diego3g.png" alt="Imagem de Usuário">
-                        <a href="https://www.github.com/diego3g" target="_blank">
-                            <p>Diego Fernandes</p>
-                            <span>diego3g</span>
-                        </a>
-                        <span></span>
-                    </td>
-                    <td class="repositories">
-                        356
-                    </td>
-                    <td class="followers">
-                        45
-                    </td>
-                    <td>
-                        <button class="remove">&times;</button>
-                    </td>
-                </tr>
-            </tbody>
+            <tbody></tbody>
         </table>
     </div>
 </body>
-
 </html>
